# SeekingData

./: .env.example  .gitignore  CHANGELOG.md  QUICK_START.md  README.md  README_CN.md  electron-builder.json  electron-builder.yml  eslint.config.js  index.html  outdated.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.codebuddy/plans/: add-model-selector_03fb9f29.md
backend/: README.md  config.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
backend/agents/: __init__.py  github_task_agent.py
backend/api/routes/: __init__.py  harbor.py  sft.py
backend/jobs/seekingdata-github-task-20260314140411-20260314140411-8f3d3ced/: config.json  result.json
backend/jobs/seekingdata-github-task-20260314140411-20260314140411-8f3d3ced/github-task-20260314140411-20260__JA3gAnB/: config.json  exception.txt  result.json
backend/models/: __init__.py  harbor.py  sft.py
backend/services/: __init__.py  sft_service.py  task_builder.py
backend/tasks/github-task-20260314140411-20260314140411-8f3d3ced/: instruction.md  task.toml
backend/tasks/github-task-20260314140411-20260314140411-8f3d3ced/tests/: test.sh
docs/: API.md  ARCHITECTURE.md  MIGRATION.md  USER_GUIDE.md
electron/: electron-env.d.ts
electron/main/: index.ts  init.ts
electron/main/utils/: envUtil.ts
electron/preload/: index.ts
scripts/: compile-babel.cjs  fix-symlinks.cjs  fix-venv-paths.cjs  preinstall-deps.cjs  start-backend.sh  start-frontend.sh
src/: App.tsx  config.jsx  index.css  main.tsx
src/components/harbor/: GitHubTaskGenerator.tsx  TaskManager.tsx  VisualTaskBuilder.tsx  index.ts
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/sft/: BatchProcessor.tsx  CotGenerator.tsx  DatasetShare.tsx  FormatConverter.tsx  ImageDatasetGenerator.tsx  SingleProcessor.tsx  VideoDatasetGenerator.tsx  index.ts
src/components/ui/: Button.tsx  Card.tsx  Input.tsx
src/lib/: api.ts  stores.ts  types.ts
src/pages/: Home.tsx  Settings.tsx
