[project]
name = "seekingdata-backend"
version = "0.1.0"
description = "SeekingData Pro Backend - FastAPI + Camel + Harbor"
authors = [{ name = "SeekingData Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.17",
    "litellm>=1.40.0",
    "httpx>=0.28.1",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "aiofiles>=24.1.0",
    "camel-ai>=0.2.89",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "services", "models", "database"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
